src/test/deca/context/invalid/created/object/equals_boolean_int.deca
// Description :
//    test equals entre un boolean et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11:  (3.71) Le membre gauche n'est pas de type 'class'
class A{}
{
boolean a;
int b;
int c = a.equals(b);
}
